--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.14.0
 pandas==1.3.3
-numpy==1.19.3
+numpy==1.22.0  # Upgraded numpy version to avoid distutils issue
 matplotlib==3.4.3
 seaborn==0.11.2
 scikit-learn==0.24.2
 lifelines==0.27.0
+
