--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.14.0
-pandas==1.3.3
-numpy==1.23.0
-matplotlib==3.4.3
-seaborn==0.11.2
-scikit-learn==0.24.2
-lifelines==0.27.0
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+streamlit
+openpyxl
 
 
